# infra_tools

./: AGENTS.md  MIGRATION_GUIDE.md  Makefile  README.md  REORGANIZATION_SUMMARY.md  SECURITY.md  TESTING.md  check_scrub_mounts.py  check_sync_mounts.py  deploy_helper.py  patch_setup.py  pyproject.toml  recall_setup.py  reconstruct_setup.py  remote_setup.py  run_tests.py  scrub_par2.py  setup_common.py  setup_completions.py  setup_pc_dev.py  setup_rails_service.py  setup_server_dev.py  setup_server_lite.py  setup_server_proxmox.py  setup_server_web.py  setup_steps.py  setup_workstation_desktop.py  setup_workstation_dev.py
.github/: copilot-instructions.md
common/: __init__.py  common_steps.py  steps.py  swap_steps.py
config/: README.md  cloudflare_ips.conf  cloudflare_tunnel_readme.md  nginx.conf.template  nginx_cache_locations.conf  xrdp_sesman.ini.template  xrdp_xsession.template
deploy/: __init__.py  deploy_steps.py  steps.py
desktop/: __init__.py  apps_steps.py  browser_steps.py  desktop_environment_steps.py  desktop_steps.py  steps.py  xrdp_steps.py
docs/: BUILD_SERVER_DESIGN.md  CICD.md  COMMAND_LINE.md  DEPLOYMENT_SAFETY.md  LOGGING.md  MACHINE_TYPES.md  SHELL_COMPLETION.md  STORAGE.md  XRDP.md
lib/: __init__.py  arg_parser.py  cache.py  cloudflare_steps.py  common_steps.py  concurrent_operations.py  concurrent_sync_scrub.py  config.py  deploy_steps.py  deploy_utils.py  deployment.py  desktop_steps.py  disk_utils.py  display.py  logging_utils.py  machine_state.py  module_loader.py  mount_utils.py  nginx_config.py  notifications.py  operation_log.py  (+25 more)
(+118 files in other folders)
